# slashem9

./: .clang-format  .clang-format-header  .gitignore  .travis.yml  INSTALL  Makefile  Makefile.embeddlb  Makefile.nodlb  README  TODO  TODO.md  Tupfile  Tuprules.tup  build.sh  configure  history.txt  makefile  monst.yaml  tags
.builds/: freebsd.yml  openbsd.yml
DEVEL/: BUGS  TODO  asan.log.506718  demobugs.txt  dmonsfree.core  nhpatchdb  nhsync  physical-damage
dat/: data.bas  data.base  dungeon.def  gehennom.des  license  medusa.des  nightmar.des  opthelp  oracles.txt  quest.txt  sokoban.des  wizhelp
dat/doc/: hh
dat/lev/: dungeon.def  grund.des  medusa.des  sokoban.des
dat/scm/: options.scm
dat/text/: data.base  rumors.tru
doc/: Guidebook.mn  Guidebook.tex  Guidebook.txt  dgn_comp.6  dlb.6  fixes0.0.1.txt  fixes0.9.txt  history.txt.old  lev_comp.6  lev_comp.txt  nethack.6  slamfaq.txt  slashem.6  slashem.txt  sources.txt  strategy.txt  tmac.n  window.doc
doc/fr/: slashem.6
include/: align.h  amiconf.h  artifact.h  artilist.h  artilist_base.h  attk.h  attrib.h  color.h  config.h  config1.h  context.h  coord.h  decl.h  defer.h  dgn_file.h  display.h  dlb.h  dungeon.h  edog.h  egyp.h  eleash.h  emin.h  engrave.h  epri.h  eshk.h  extern.h  file.h  filename.h  flag.h  func_tab.h  global.h  hack.h  lev.h  macconf.h  mactty.h  macwin.h  mail.h  mextra.h  mfndpos.h  mkroom.h  (+54 more)
src/: allmain.c  alloc.c  apply.c  artifact.c  attrib.c  ball.c  bones.c  borg.c  botl.c  cmd.c  dbridge.c  decl.c  detect.c  dig.c  display.c  dlb.c  do.c  do_name.c  do_wear.c  dog.c  dogmove.c  dokick.c  dothrow.c  drawing.c  dungeon.c  eat.c  end.c  engrave.c  exper.c  explode.c  extralev.c  files.c  fountain.c  gypsy.c  hack.c  hacklib.c  invent.c  light.c  lock.c  mail.c  (+74 more)
sys/amiga/: amidos.c  amidos.p  amirip.c  amitty.c  amiwind.c  amiwind.p  winami.c  winami.p  winmenu.c  winproto.h  winstr.c
sys/autoconf/: Install.ac  Makefile.doc  Makefile.src  Makefile.top  Makefile.utl  acinclude.m4  autoconf.hin  bootstrap.sh  config.guess  config.sub  configure.ac  depend.in
sys/be/: bemain.c
sys/mac/: Files.r  Install.mpw  Install.mw  Macintosh.make  dprintf.c  macerrs.c  macfile.c  macmain.c  macmenu.c  macsnd.c  mactty.c  macunix.c  macwin.c  mgetline.c  mrecover.c  mttymain.c
sys/msdos/: Install.dos  Makefile.GCC  alginit.h  bmp2txt.c  idx2bmp.c  maintovl.doc  msdos.c  pckeys.c  pctiles.h  pcvideo.h  tile2bin.c  txt2bmp.c  vidal2.c  vidalleg.c  video.c  vidvga.c
sys/share/: NetHack.cnf  dgn_lex.c  dgn_yacc.c  ioctl.c  lev_lex.c  lev_lex.c.orig  lev_yacc.c  nhlan.c  pcmain.c  pcsys.c  pctty.c  pcunix.c  random.c  tclib.c  unixtty.c  uudecode.c
sys/share/libtre/: regcomp.c  regexec.c  tre-compile.c  tre-config.h  tre-match-backtrack.c  tre-match-parallel.c  tre-mem.c  tre-parse.c  tre-stack.c
sys/share/s7/: mus-config.h  s7.c  s7.h
sys/tup/: Tupbase.tup  Tuplinux.tup  Tupmingw.tup  Tupprefs.tup  Tupsrc.tup  Tupunix.tup  Tupwin32.tup
sys/unix/: Makefile.src  Makefile.top  Makefile.utl  cpp1.shr  cpp2.shr  cpp3.shr  depend.awk  nethack.sh  slashem.sh  slashem9.sh  unixmain.c  unixres.c  unixunix.c
sys/vms/: vmsmail.c  vmsmain.c  vmstty.c  vmsunix.c
sys/wince/: Install.ce  cesetup.bat  mhmenu.c  mhmsg.h  mhstatus.c  mswproc.c  winMS.h
sys/winnt/: Install.gcc  Install.nt  Makefile.bcc  Makefile.cygwin  Makefile.gcc  Makefile.msc  Makefile.nt  cc-pkg.c  console.rc  cursmake.gcc  defaults.nh  mapimail.c  nh340key.c  nhdefkey.c  nhraykey.c  nhsetup.bat  ntsound.c  nttty.c  setup.bat  winnt.c  winnt.cnf
util/: data2c.c  dgn_comp.l  dgn_comp.y  dgn_lex.l  dgn_main.c  dgn_yacc.y  dlb_main.c  indent.sh  lev_comp.l  lev_comp.y  lev_lex.l  lev_main.c  lev_yacc.y  makedefs.c  panic.c  recover.c  yaml2mon.py
win/Qt/: qt_win.cpp
win/X11/: Window.c  winX.c  winmap.c  winmenu.c  winmesg.c  winmisc.c  winstat.c  wintext.c
win/curses/: cursdial.c  cursdial.h  curses-todo.txt  cursinit.c  cursinit.h  cursinvt.c  cursinvt.h  cursmain.c  cursmesg.c  cursmesg.h  cursmisc.c  cursmisc.h  cursstat.c  cursstat.h  curswins.c  curswins.h
win/gem/: wingem.c  wingem1.c
win/gl/: Install.GL  gl_conf.c  gl_emul.c  gl_font.c  gl_hardw.c  gl_image.c  gl_main.c  gl_map.c  gl_menu.c  gl_opt.c  gl_rendu.c  gl_role.c  gl_softw.c  gl_stat.c  gl_text.c  gl_tile.c  gl_unit.c  gl_win.c
win/gnome/: gnbind.c  gnbind.h  gnmap.c  gnmenu.h  gnopts.c
win/gtk/: Makefile.unx  Makefile.w32  cc-gtk.c  gtk.c  gtkconcb.c  gtkext.c  gtkextcmd.c  gtkgetlin.c  gtkhack.c  gtkhackrc.c  gtkint.c  gtkmap.c  gtkmenu.c  gtkmessage.c  gtkmisc.c  gtkprefs.c  gtkprogress.c  gtkprogress.h  gtkstatus.c  gtktile.c  gtkyn.c  panic.c  xshm.c  xshmmap.c
win/gtk2/: Makefile.unx  Makefile.w32  cc-gtk.c  gtk.c  gtkext.c  gtkextcmd.c  gtkgetlin.c  gtkhack.c  gtkhackrc.c  gtkint.c  gtkmap.c  gtkmenu.c  gtkmessage.c  gtkmisc.c  gtkstatus.c  gtktile.c  gtkyn.c  panic.c  xshmmap.c
win/proxy/: Install.pxy  Makefile  Makefile.unx  Makefile.w32  callback.c  compxdr.c  dlbh.c  getopt.c  glyphmap.c  mapid.c  nhext.c  nhextio.c  nhextnb.c  nhextxdr.c  nhxdr.c  nhxdr.h  proxycb.c  proxysvc.c  prxychar.c  prxyconn.c  prxymap.c  prxytile.c  riputil.c  test_com.c  test_com.h  test_ext.c  test_io.c  test_xdr.c  winproxy.c
win/share/: bigtile.c  gifread.c  magtile.c  mapmerge.c  ppmwrite.c  thintile.c  tile.doc  tile2bmp.c  tile2png.c  tile_t.h  tilemap.c  tiletext.c  txtfilt.c  txtmerge.c  xpmread.c
win/tty/: getline.c  termcap.c  topl.c  wintty.c
win/win32/: dgncomp.dsp  dgnstuff.dsp  dlb_main.dsp  levcomp.dsp  levstuff.dsp  magtile.dsp  makedefs.dsp  mhdlg.c  mhfont.c  mhinput.c  mhmain.c  mhmap.c  mhmap.h  mhmenu.c  mhmenu.h  mhmsg.h  mhmsgwnd.c  mhrip.c  mhsplash.c  mhstatus.c  mhtext.c  mswproc.c  nethackw.dsp  nhprocs.c  nhwin32.h  nhwin32.rc  recover.dsp  resource.h  tile2bmp.dsp  tilemap.dsp  tiles.dsp  tiles.mak  tiles128.dsp  tiles128.mak  txtbg.dsp  txtmerge.dsp  uudecode.dsp  win32msg.c  winMS.h  winhack.c  (+2 more)
